--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,8 @@
    },
    "outputs": [],
    "source": [
-    "names_and_ranks = [] # make sure the list is empty"
+    "names_and_ranks = [] \n",
+    "for # make sure the list is empty"
    ]
   },
   {
