--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "for city in city# make sure the list is empty"
+    "for city in city_names :\n",
+    "    # make sure the list is empty"
    ]
   },
   {
