--- a/index.ipynb
+++ b/index.ipynb
@@ -1061,7 +1061,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for city in city_names :\n",
-    "    print()"
+    "    print(inde)"
    ]
   },
   {
