Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1061,7 +1061,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for city in city_names :\n",
-    "    print(\"city\"+\"city_ind\")"
+    "    print(\"city\"+\"city_indices\")"
    ]
   },
   {
