--- a/index.ipynb
+++ b/index.ipynb
@@ -1060,7 +1060,7 @@
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
-    "for index in city_names :\n",
+    "for index in city_indices :\n",
     "    "
    ]
   },
