--- a/index.ipynb
+++ b/index.ipynb
@@ -1061,7 +1061,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for index in city_indices :\n",
-    "    names_and_ranks.append(index +\"\")"
+    "    names_and_ranks.append(index +\".\"+)"
    ]
   },
   {
