Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,27 +1053,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
     "for index in city_indices :\n",
-    "    names_and_ranks.append(\"index\" +\". \"+ city_names[index])"
+    "    names_and_ranks.append(index +\". \"+ city_names[index])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'index.city_names[index]'"
+       "'index. Iguazu Falls'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
