--- a/index.ipynb
+++ b/index.ipynb
@@ -1070,8 +1070,7 @@
    ],
    "source": [
     "names_and_ranks = [] \n",
-    "for index in city_indices :\n",
-    "    names_and_ranks.append(city_indices[index] ,\". \", city_names[index])"
+    "for i"
    ]
   },
   {
