--- a/index.ipynb
+++ b/index.ipynb
@@ -1070,7 +1070,8 @@
    ],
    "source": [
     "names_and_ranks = [] \n",
-    "for number in city_indices"
+    "for number in city_indices :\n",
+    "    "
    ]
   },
   {
