Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices :\n",
-    "    names_and_ranks.appe"
+    "    names_and_ranks.append"
    ]
   },
   {
