Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,36 +1053,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-20-372d7a681b65>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-20-372d7a681b65>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(\"number\" + \". \" + \"city_names[number]\"\")\u001b[0m\n\u001b[0m                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices :\n",
-    "    names_and_ranks.append(\"number\" + \". \" + \"city_names[number]\"\")"
+    "    names_and_ranks.append(\"number\" + \". \" + \"city_names[number]\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'index. Iguazu Falls'"
+       "'number. city_names[number]'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
