--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,7 +1059,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices :\n",
-    "    names_and_ranks.append(\"number\" + \". \" + \"city_names[number]\")"
+    "    names_and_ranks.append(\"number + \". \" + \"city_names[number]\")"
    ]
   },
   {
