--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,13 +1053,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-23-590670fe24d4>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-590670fe24d4>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(number \". \" city_names[number])\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices :\n",
-    "    names_and_ranks.append(number \". \" + \"city_names[number]\")"
+    "    names_and_ranks.append(number \". \" city_names[number])"
    ]
   },
   {
