--- a/index.ipynb
+++ b/index.ipynb
@@ -1068,7 +1068,8 @@
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices :\n",
-    "    names_and_ranks.append(x)(number \". \" city_names[number])"
+    "    number \". \" city_names[number])\n",
+    "    names_and_ranks.append(x)"
    ]
   },
   {
