Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1071,7 +1071,7 @@
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices :\n",
-    "    x = (city_indices[number] + \". \" + city_names[number])\n",
+    "    x = (\"city_indices[number] + \". \" + city_names[number])\n",
     "    names_and_ranks.append(x)"
    ]
   },
