--- a/index.ipynb
+++ b/index.ipynb
@@ -1059,22 +1059,22 @@
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices :\n",
-    "    x = (\"city_indices[number]\" + \". \" + city_names[number])\n",
+    "    x = (city_indices[number]\" + \". \" + city_names[number])\n",
     "    names_and_ranks.append(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'number. city_names[number]'"
+       "'city_indices[number]. Iguazu Falls'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
