Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1065,18 +1065,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'11. Iguazu Falls'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0. Buenos Aires\n",
+      "1. Toronto\n",
+      "11. Iguazu Falls\n"
+     ]
     }
    ],
    "source": [
