--- a/index.ipynb
+++ b/index.ipynb
@@ -1053,28 +1053,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "names_and_ranks = [] \n",
     "for number in city_indices :\n",
-    "    x = (str(city_indices[number]) + \". \" + city_names[number])\n",
+    "    x = (str(city_indices[number]+1) + \". \" + city_names[number])\n",
     "    names_and_ranks.append(x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0. Buenos Aires\n",
-      "1. Toronto\n",
-      "11. Iguazu Falls\n"
+      "1. Buenos Aires\n",
+      "2. Toronto\n",
+      "12. Iguazu Falls\n"
      ]
     }
    ],
