--- a/index.ipynb
+++ b/index.ipynb
@@ -1100,7 +1100,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for . "
+    "for city in cities . :\n",
+    "    "
    ]
   },
   {
