--- a/index.ipynb
+++ b/index.ipynb
@@ -1100,8 +1100,8 @@
    "outputs": [],
    "source": [
     "city_populations = []\n",
-    "for city in cities . :\n",
-    "    "
+    "for city in cities  :\n",
+    "    city_populations"
    ]
   },
   {
