--- a/index.ipynb
+++ b/index.ipynb
@@ -1110,7 +1110,7 @@
    ],
    "source": [
     "city_populations = []\n",
-    "for city in cities  :\n",
+    "for city, pop in cities  :\n",
     "    city_populations.append(cities.value['Population'])"
    ]
   },
