--- a/index.ipynb
+++ b/index.ipynb
@@ -1111,7 +1111,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities  :\n",
-    "    for \n",
+    "    for city, population \n",
     "    city_populations.append(cities.value['Population'])"
    ]
   },
