Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1112,7 +1112,7 @@
     "city_populations = []\n",
     "for city in cities  :\n",
     "    for city, population in city\n",
-    "    city_populations.append()"
+    "    city_populations.append(city.value)"
    ]
   },
   {
