--- a/index.ipynb
+++ b/index.ipynb
@@ -1111,7 +1111,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities  :\n",
-    "    for city, population in city, :\n",
+    "    for city, population in city.items() :\n",
     "        city_populations.append(city.value)"
    ]
   },
