--- a/index.ipynb
+++ b/index.ipynb
@@ -1099,7 +1099,7 @@
    "source": [
     "city_populations = []\n",
     "for city in cities  :\n",
-    "    for population in city.items() :\n",
+    "    for key, value in city.items() :\n",
     "        city_populations.append(population)"
    ]
   },
