--- a/index.ipynb
+++ b/index.ipynb
@@ -1100,6 +1100,7 @@
     "city_populations = []\n",
     "for city in cities  :\n",
     "    for key, value in city.items() :\n",
+    "        if key == \"\"\n",
     "        city_populations.append(population)"
    ]
   },
