--- a/index.ipynb
+++ b/index.ipynb
@@ -1100,8 +1100,8 @@
     "city_populations = []\n",
     "for city in cities  :\n",
     "    for key, value in city.items() :\n",
-    "        if key == \"Population\"\n",
-    "        city_populations.append()"
+    "        if key == \"Population\" :\n",
+    "            city_populations.append()"
    ]
   },
   {
