Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1101,7 +1101,7 @@
     "for city in cities  :\n",
     "    for key, value in city.items() :\n",
     "        if key == \"Population\" :\n",
-    "            city_populations.append()"
+    "            city_populations.append(value)"
    ]
   },
   {
