--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -2091,9 +2091,7 @@
    },
    "outputs": [],
    "source": [
-    "city_areas = []\n",
-    "for city in cities :\n",
-    "    "
+    "city_areas = []\n"
    ]
   },
   {
