Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2093,7 +2093,7 @@
    "source": [
     "city_areas = []\n",
     "for city in cities :\n",
-    "    for key, valu"
+    "    for key, value in "
    ]
   },
   {
