Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2095,7 +2095,7 @@
     "for city in cities :\n",
     "    for key, value in city.items() :\n",
     "        if key == \"Area\" :\n",
-    "            "
+    "            city_areas.append()"
    ]
   },
   {
