Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2091,9 +2091,7 @@
    "source": [
     "city_areas = []\n",
     "for city in cities :\n",
-    "    for key, value in city.items() :\n",
-    "        if key == \"Area\" :\n",
-    "            city_areas.append(value)"
+    "    city_areas.append()"
    ]
   },
   {
